--- a/.github/workflows/manual_check_and_tag.yml
+++ b/.github/workflows/manual_check_and_tag.yml
@@ -32,7 +32,7 @@ jobs:
           go-version: 'stable'
 
       - name: Install packwiz
-        run: go install github.com/0byte-coding/packwiz@6c82404e86cffa5fcef7dd259a93fcf5080ddfb3
+        run: go install github.com/0byte-coding/packwiz@241179729+0byte-coding@users.noreply.github.com
 
       - name: Add Go bin to PATH
         run: echo "$HOME/go/bin" >> $GITHUB_PATH
